数组最大值最小值

--- a/求数组中最大值和最小值.md
+++ b/求数组中最大值和最小值.md
@@ -41,6 +41,10 @@ function max(prev, next) {
 
 console.log(arr.reduce(max))
 
+function Max(arr) {
+    return arr.reduce((a, b) => a > b ? a : b)
+}
+console.log(arr)
 ```
 
 ### 排序
@@ -60,6 +64,11 @@ console.log(arr.length - 1)
 var arr = [6, 4, 1, 8, 2, 11, 23]
 
 console.log(Math.max(...arr))
+
+// Relfect
+
+Relfect.apply(Math.max, Math, arr) // 23
+Reflect.apply(Math.min, Math, arr) // 1
 
 ```
 
