你不知道的JavaScript

--- a/你不知道的JavaScript中/第一章类型和语法.md
+++ b/你不知道的JavaScript中/第一章类型和语法.md
@@ -137,3 +137,92 @@ a;
 ```
 Object(...)、Function(...) 和RegExp(...)
 同样,除非万不得已,否则尽量不要使用Object(...) Function(...) /RegExp
+
+```javascript
+var c = new Object()
+c.foo = "bar"
+c; // { foo:"bar" }
+
+var d = { foo: "bar"}
+d;
+
+var e = new Function("a", "return a *2");
+var f = function(a) { return a * 2}
+
+function g(a) { return a * 2};
+var h = new RegExp("^a*b+", "g")l
+var i = /^a*b+/g
+```
+
+### 4.强制类型类型转换
+
+**值类型转换**
+- 将值从一种类型转换为另一种类型通常称为类型转换,这是显式的情况,而隐式强制类型转换不会那么明显,通常是某些操作产生的副作用,例如
+```javascript
+var a = 42;
+var b = a + ""; // 隐式类型转换
+var c = String(a);
+```
+对变量 b 而言，强制类型转换是隐式的；由于 + 运算符的其中一个操作数是字符串，所以 是字符串拼接操作，结果是数字 42 被强制类型转换为相应的字符串 "42"。
+
+而 String(..) 则是将 a 显式强制类型转换为字符串。
+
+两者都是将数字 42 转换为字符串 "42"
+
+**抽象值操作**
+
+ToString它负责处理非字符串的强制类型转换
+数组的默认toString()方法经过了重新定义,将所有单元字符串化以后再用
+```javascript
+var a = [1, 2, 3];
+a.toString();
+// toStrig可以被显式调用,或者在需要字符串化时自动调用
+```
+JSON字符串化
+工具函数JSON.strginify(...) 在将JSON对象序列化为字符串时也用到了ToString
+```javascript
+JSON.stringify(42) // "42"
+JSON.stringify("42") //""42""
+JSON.stringify(null) // "null"
+JSON.strginify(true) // "true"
+```
+**ToNumber**
+为了将值转换为相应的基本类型值，抽象操作 ToPrimitive（参见 ES5 规范 9.1 节）会首先 （通过内部操作 DefaultValue，参见 ES5 规范 8.12.8 节）检查该值是否有 valueOf() 方法。 如果有并且返回基本类型值，就使用该值进行强制类型转换。如果没有就使用 toString() 的返回值（如果存在）来进行强制类型转换
+
+```javascript
+var a = {
+  valueOf: function() {
+    return "42"
+  }
+}
+
+var b = {
+  toString: function() {
+    return "42"
+  }
+}
+
+var c = [4, 2];
+c.toString = function() {
+  return this.join(""); // "42"
+}
+
+Number( a ); // 42
+Number(b); // 42
+Number(c); // 42
+Number(""); // 0
+Number([]); // 0
+Number(['abc']) // NAN
+```
+### ToBoolean
+JavaScript 中有两个关键词 true 和 false，分别代表布尔类型 中的真和假。我们常误以为数值 1 和 0 分别等同于 true 和 false
+
+> 假值
+```
+undefined
+null
+false
++0、 -0和NaN
+
+假值得布尔强制类型转换结果为false
+```
