装饰器模式

--- a/设计模式/装饰器模式.md
+++ b/设计模式/装饰器模式.md
@@ -1,4 +1,5 @@
-// 在 ES7 中，我们可以像写 python 一样通过一个@语法糖轻松地给一个类装上装饰器：
+### 在 ES7 中，我们可以像写 python 一样通过一个@语法糖轻松地给一个类装上装饰器：
+```js
 function classDecorator () {
   tagtet.hasDescrator = true
   return target
@@ -12,9 +13,10 @@ class Button {
 }
 
 console.log(Button.hasDescrator)
+```
 
-// 也可以使用相同的语法糖去装饰类里面的方法
-
+- 也可以使用相同的语法糖去装饰类里面的方法
+```js
 function funcDecorator (target, name, descriptor) {
   let originalMethod = descriptor.value
   descriptor.value= function() {
@@ -34,7 +36,101 @@ class Button {
 // 验证装饰器是否有效
 const button = new Button()
 console.log(button.onClick())
+```
 
-// 安装 Babel 及装饰器相关的 Babel 插件
+- 安装 Babel 及装饰器相关的 Babel 插件
 
-// npm install babel-preset-env babel-plugin-transform-decorators-legacy --save-dev
+- npm install babel-preset-env babel-plugin-transform-decorators-legacy --save-dev
+
+### 生产实践
+
+- React中的装饰器：HOC
+```js
+import React, { Component } from 'React'
+
+const BorderHoc = WrappedComponent => class extends Component {
+  render () {
+    return <div style={{border: 'solid 1px red'}}>
+      <WrappedComponent />
+    </div>
+  }
+}
+```
+
+```js
+// 用来装饰目标组件
+import React, { Component } from 'react'
+import BorderHoc from './BorderHoc'
+// 用BorderHoc装饰目标组件
+@BorderHoc
+class TargetComponent extends React.Component {
+  render () {
+    // 目标组件具体业务
+  }
+}
+
+// export 出去的其实是一个被包裹后的组件
+export default TargetComponent
+```
+### 使用装饰器改写React connect
+在React中,需要引入Redux 时,通常需要调用connect方法来把组件状态和组件捆绑在一起
+```js
+import React, { Component } from 'React'
+import { connect } from 'react-redux'
+import { bindActionCreators } from 'redux'
+import action from './action.js'
+
+class App extends Component {
+  render () {
+    // App的具体业务逻辑
+  }
+}
+
+function mapStateToProps(state) {
+  // 假设App状态对应状态树上的app节点
+  return state.app
+}
+
+function mapDispatchToProps(dispatch) {
+  return bindActionCreators(action, dispatch)
+}
+
+// 把App组件与Redux一起
+export default connect(mapStateToProps, mapDispatchToProps)(App)
+```
+mapStateToProps 是一个函数，它可以建立组件和状态之间的映射关系；mapDispatchToProps也是一个函数，它用于建立组件和store.dispatch的关系，使组件具备通过 dispatch 来派发状态的能力
+
+调用 connect 可以返回一个具有装饰作用的函数，这个函数可以接收一 个React 组件作为参数，使这个目标组件和 Redux 结合、具备 Redux 提供的数据和能力。既然有装饰作用，既然是能力的拓展，那么就一定能用装饰器来改写：
+把 connect 抽出来：
+
+```js
+import { connect } from 'react-redux'
+import { bindActionCreators } from 'redux'
+import action from './action.js'
+
+function mapStateToProps(state) {
+  return state.app
+}
+
+function mapDispatchToProps(dispatch) {
+  return bindActionCreators(action, dispatch)
+}
+
+// 将connect调用后的结果作为一个装饰器导出
+export default connect(mapStateToProps, mapDispatchToProps)
+```
+
+在组件文件里引入connect
+```js
+import React, { Component } from 'react'
+import connect from './connect.js'   
+
+@connect
+export default class App extends Component {
+  render() {
+    // App的业务逻辑
+  }
+}
+```
+
+代码清晰了很多,具有可维护性、可读性
