--- a/设计模式/工厂模式.md
+++ b/设计模式/工厂模式.md
@@ -1,4 +1,5 @@
-构造器
+### 构造器
+```js
 const lilei = {
   name: '李雷',
   age: '25',
@@ -14,17 +15,25 @@ const hanMeiMei = {
     age: 24,
     career: 'product manager'
 }
+```
+
 构造函数
+```js
 function User(name, age, career) {
     this.name = name
   this.age = age
   this.carrre = career
 }
+```
 楼上个这 User，就是一个构造器。此处我们采用了 ES5 构造函数的写法，因为 ES6 中的 class 其实本质上还是函数，class 语法只是语法糖，构造函数，才是它的真面目
 调用
+```js
 const user = new User(name, age, career)
+```
 像 User 这样当新建对象的内存被分配后，用来初始化该对象的特殊函数，就叫做构造器。在 JavaScript 中，我们使用构造函数去初始化对象，就是应用了构造器模式。这个模式太简单了，简单到我这一通讲对很多同学来说其实并不必要，大家都是学过 JavaScript 基础的人，都知道怎么 new 一个对象。但是我们洋洋洒洒这么一段的目的，并不是为了带大家复习构造函数本身的用法，而是希望大家去思考开篇我们提到的问题：
+
 简单的工厂模式
+```js
 function coder (name, age) {
   this.name = name
   this.age = age
@@ -46,7 +55,9 @@ function Favtory (name, age, career) {
       case 'product manager'
   }
 }
+```
 看起来是好一些了，至少我们不用操心构造函数的分配问题了。但是大家注意我在 switch 的末尾写了个省略号，这个省略号比较恐怖。看着这个省略号，李雷哭了，他想到：整个公司上下有数十个工种，难道我要手写数十个类、数十行 switch 吗？
+```js
 function User (name, age, career, work) {
   this.name = name
   this.age = age
@@ -76,6 +87,7 @@ const CAREER_WORKS = {
 function Favtory(name, age, career, work) {
   return {name, age,career, CAREER_WORKS[work]}
 }
+```
 这样一来，我们要做事情是不是简单太多了？不用自己时刻想着我拿到的这组数据是什么工种、我应该怎么给它分配构造函数，更不用手写无数个构造函数——Factory已经帮我们做完了一切，而我们只需要像以前一样无脑传参就可以了！
 总结
 工厂模式的目的，就是为了实现无脑传参，就是为了爽！
