--- a/设计模式/观察者模式.md
+++ b/设计模式/观察者模式.md
@@ -28,3 +28,16 @@ class Publisher {
   }
 }
 ```
+
+定义订阅类
+
+```js
+class Observer {
+  constructor () {
+    console.log('Observer created')
+  }
+  update () {
+    console.log('Observer.update invoked')
+  }
+}
+```
