--- a/javaScript进阶/各种方法数组去重.md
+++ b/javaScript进阶/各种方法数组去重.md
@@ -24,3 +24,36 @@ function unique(array)  {
 console.log(unique(array)) // [1, '1']
 
 ```
+
+```js
+let arr = [
+  1,
+  1,
+  "1",
+  "1",
+  null,
+  null,
+  undefined,
+  undefined,
+  /a/,
+  /a/,
+  NaN,
+  NaN,
+  {},
+  {},
+  [],
+  [],
+];
+
+let obj = {};
+let res = arr.filter((item) => {
+  if (obj.hasOwnProperty(typeof item + item)) {
+    return false;
+  } else {
+    obj[typeof item + item] = true;
+    return true;
+  }
+});
+
+console.log(res);
+```
