--- a/javaScript进阶/高频手写JS代码/30道高频手写JS.md
+++ b/javaScript进阶/高频手写JS代码/30道高频手写JS.md
@@ -1,10 +1,13 @@
 https://juejin.im/post/6870319532955828231
+
 ### 1.手动实现一个浅拷贝
+
 浅拷贝只拷贝对象或者数组的第一层内容
+
 ```js
 const shallClone = (target) => {
-  if (typeof target === 'object' && typeof target !== 'null') {
-    const cloneTarget = Array.isArray('object') ? [] : {}
+  if (typeof target === "object" && typeof target !== "null") {
+    const cloneTarget = Array.isArray("object") ? [] : {};
     for (let prop in target) {
       if (target.hasProperty(prop)) {
         cloneTarget[prop] = target[prop]; // 遍历对象自身可枚举属性（不考虑继承属性和原型对象）
@@ -14,16 +17,17 @@ const shallClone = (target) => {
   } else {
     return target;
   }
-}
-
+};
 ```
 
 ### 2、实现一个深拷贝
+
 深克隆：层层拷贝对象或数组的每一层内容
+
 ```js
-function deepClone (target) {
+function deepClone(target) {
   if (target === null) return null;
-  if (typeof target !== 'object') return target;
+  if (typeof target !== "object") return target;
   const cloneTarget = Array.isArray(target) ? [] : {};
   for (let prop in target) {
     if (target.hasOwnProperty(prop)) {
@@ -37,8 +41,9 @@ function deepClone (target) {
 ### 3、手动实现一个深克隆 (考虑日期/正则等特殊对象和解决循环引用情况)
 
 ```js
-const isObject = (target) => 
-(typeof target === 'object' || typeof target === 'function') && target !== null;
+const isObject = (target) =>
+  (typeof target === "object" || typeof target === "function") &&
+  target !== null;
 
 function deepClone(target, map = new Map()) {
   if (map.get(target)) {
@@ -51,5 +56,171 @@ function deepClone(target, map = new Map()) {
   if (/^(RegExp|Date)$/i.test(constructor.name)) {
     return new constructor(target); // 创建一个新的特殊对象(正则类/日期类)的实例
   }
+}
+```
+
+### 4、手写实现 instanceOf 的机制
+
+```js
+function myInstanceOf(left, right) {
+  if (left !== "object" || left === null) return false;
+  // getProtypeOf是Object对象自带的一个方法,能够拿到参数的原型对象
+  let proto = Object.getProtypeOf(left);
+
+  while (true) {
+    if (proto === null) return false;
+    if (proto === right.prototype) return true;
+    proto = Object.getPrototypeOf(proto);
+  }
+}
+```
+
+### 5、数组去重
+
+```js
+const arr = [1, 1, "1", 17, true, true, false, false, "true", "a", {}, {}];
+
+// 方法1
+
+const res1 = Array.from(new Set(arr));
+
+// 方法二 两层for 循环 + splice
+const unique1 = (arr) => {
+  let len = arr.length;
+  for (let i = 0; i < len; i++) {
+    for (let j = j + 1; j < len; j++) {
+      if (arr[i] === arr[j]) {
+        arr.splice(j, 1);
+        len--;
+        j--;
+      }
+    }
+  }
+  return arr;
+};
+
+// 方法三 indexOf
+
+const unique2 = (arr) => {
+  const res = [];
+  for (let i = 0; i < arr.length; i++) {
+    if (res.indexOf(arr[i]) === -1) {
+      res.push(arr[i]);
+    }
+  }
+  return res;
+};
+
+// 方法四 include
+
+const unique3 = (arr) => {
+  const res = [];
+  for (let i = 0; i < arr.length; i++) {
+    if (!res.include(arr[i])) res.push(arr[i]);
+  }
+  return res;
+};
+
+// 方法五 filter
+
+const unique5 = (arr) => {
+  return arr.filter((item, index) => {
+    return arr.indexOf(item) === index;
+  });
+};
+
+// 六
+
+let arr = [
+  1,
+  1,
+  "1",
+  "1",
+  null,
+  null,
+  undefined,
+  undefined,
+  /a/,
+  /a/,
+  NaN,
+  NaN,
+  {},
+  {},
+  [],
+  [],
+];
+
+let obj = {};
+let res = arr.filter((item) => {
+  if (obj.hasOwnProperty(typeof item + item)) {
+    return false;
+  } else {
+    obj[typeof item + item] = true;
+    return true;
+  }
+});
+
+console.log(res);
+```
+
+### 6、Apply
+
+```js
+Function.prototype.myApply = function (context || window, args) {
+  if (typeof this !== 'function') {
+    throw new TypeError('type Error')
+  }
+
+  const fn = Symbol('fn')
+  context[fn] = this;
+  const res = context[fn](...args)
+  delete context[fn];
+  return res
+}
+```
+
+### 7、call
+
+```js
+Function.prototype.myCall = function (context) {
+  context.fn = this;
+  var args = [];
+
+  for (var i = 1, len = arguments.length; i < len; i++) {
+    args.push("arguments[" + i + "]");
+  }
+  eval("context.fn(" + args + ")");
+  delete context.fn;
+};
+```
+
+### 8、Bind
+
+```js
+Function.prototype.myBind = function (context, ...args) {
+  if (typeof this !== "function") {
+    throw TypeError("type Error");
+  }
+
+  var self = this;
+  return function () {
+    if (this instanceof F) {
+      return new self(...args, ...arguments);
+    }
+    return self.apply(context, [...args, ...arguments]);
+  };
+};
+```
+
+### 9、new 实现
+
+```js
+function objectFactory() {
+  var obj = new Object(),
+    Constructor = [].shift.call(arguments);
+  obj.__proto__ = Constructor.prototype;
+
+  var ret = Constructor.apply(obj, arguments);
+  return typeof ret === "object" ? ret : obj;
 }
 ```
