--- a/各大厂面试题/好未来.md
+++ b/各大厂面试题/好未来.md
@@ -104,15 +104,36 @@ function throttle(fn, wait, immediate) {
 }
 ```
 
-3. 介绍一下 JS 的宏任务和微任务
-   围绕事件循环进行解答
+### 3. 介绍一下 JS 的宏任务和微任务
+
+围绕事件循环进行解答
 
 微任务包括 process.nextTick ，promise ，MutationObserver，其中 process.nextTick 为 Node 独有。
 宏任务包括 script ， setTimeout ，setInterval ，setImmediate ，I/O ，UI rendering。
 
-4. 介绍一下 webpack 的工作原理和打包过程、常用的 loader 有哪些
-5. webpack 打包的时候有哪些提速方式
-6. React 生命周期有哪些
+### 4. 介绍一下 webpack 的工作原理和打包过程、常用的 loader 有哪些
+
+回答 定义- 实践- 问题/解决 - 升华
+
+- style-loader、css-loader、less-loader、sass-loader 等
+- 文件 file-loader 、url-loader 等
+
+### 5. webpack 打包的时候有哪些提速方式
+
+- 缩小文件的搜索范围，设置 resolve.modules:[path.resolve(__dirname, 'node_modules')]避免层层查找。
+- Happypack 来加速代码构建，将原有的 webpack 对 loader 的执行过程，从单一进程的形式扩展多进程模式，从而加速代码构建；原本的流程保持不变，这样可以在不修改原有配置的基础上，来完成对编译过程的优化，具体配置如下：
+- 使用 DllPlugin 减少基础模块编译次数
+
+### 6. React 生命周期有哪些
+
+<img src="../React/images/4.jpg"/>
+constructor 如果不初始化 state 或不进行方法绑定，则不需要为 React 组件实现构造函数。
+componentDidMount()  会在组件挂载后（插入 DOM 树中）立即调用。依赖于 DOM 节点的初始化应该放在这里。如需通过网络请求获取数据，此处是实例化请求的好地方。这个方法是比较适合添加订阅的地方。如果添加了订阅，请不要忘记在 componentWillUnmount() 里取消订阅
+componentDidUpdate () 会在更新后会被立即调用。首次渲染不会执行此方法。
+```js
+
+```
+
 7. React16 生命周期有哪些变化
 8. React16 的 hooks 有了解过吗
 9. useEffect 是用来做什么的
@@ -124,3 +145,4 @@ function throttle(fn, wait, immediate) {
 15. 介绍一个你做的比较有成就感的任务
 16. 你觉得整个项目中有什么问题：开发方式、运作方式···
 17. 平时怎么保持学习的
+```
