--- a/各大厂面试题/好未来.md
+++ b/各大厂面试题/好未来.md
@@ -127,22 +127,42 @@ function throttle(fn, wait, immediate) {
 ### 6. React 生命周期有哪些
 
 <img src="../React/images/4.jpg"/>
+
 constructor 如果不初始化 state 或不进行方法绑定，则不需要为 React 组件实现构造函数。
-componentDidMount()  会在组件挂载后（插入 DOM 树中）立即调用。依赖于 DOM 节点的初始化应该放在这里。如需通过网络请求获取数据，此处是实例化请求的好地方。这个方法是比较适合添加订阅的地方。如果添加了订阅，请不要忘记在 componentWillUnmount() 里取消订阅
+componentDidMount() 会在组件挂载后（插入 DOM 树中）立即调用。依赖于 DOM 节点的初始化应该放在这里。如需通过网络请求获取数据，此处是实例化请求的好地方。这个方法是比较适合添加订阅的地方。如果添加了订阅，请不要忘记在 componentWillUnmount() 里取消订阅
 componentDidUpdate () 会在更新后会被立即调用。首次渲染不会执行此方法。
+
 ```js
-
+// react15
+constructor();
+componentsWillReceiveProps();
+shouldComponentUpdate();
+componentWillMount();
+componentWillUpdate();
+componentDidUpdate();
+componentDidMount();
+render();
+componentWillUnMount();
 ```
+![](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/a7109d1edb6d42a5b0eeba892e1e71ac~tplv-k3u1fbpfcp-watermark.image)
 
-7. React16 生命周期有哪些变化
-8. React16 的 hooks 有了解过吗
+### 7. React16 生命周期有哪些变化
+### 8. React16 的 hooks 有了解过吗
+
 9. useEffect 是用来做什么的
+
 10. React 的 diff 算法介绍一下
+
 11. React 的 Fiber 机制有了解过吗
+
 12. 有没有了解过 Babel 里面的任务调度是如何实现的、任务的优先级是如何划分的
+
 13. Vue 里面的 MVVM 的理解
 14. 数据的双向绑定在 Vue2 和 Vue3 里面是怎么实现的
 15. 介绍一个你做的比较有成就感的任务
 16. 你觉得整个项目中有什么问题：开发方式、运作方式···
 17. 平时怎么保持学习的
+
+```
+
 ```
