--- a/javaScript进阶/高频手写JS代码/30道高频手写JS.md
+++ b/javaScript进阶/高频手写JS代码/30道高频手写JS.md
@@ -183,14 +183,15 @@ Function.prototype.myApply = function (context || window, args) {
 
 ```js
 Function.prototype.myCall = function (context) {
-  context.fn = this;
-  var args = [];
-
-  for (var i = 1, len = arguments.length; i < len; i++) {
-    args.push("arguments[" + i + "]");
+  if (typeof this !== "function") {
+    throw new TypeError("Error");
   }
-  eval("context.fn(" + args + ")");
+  context = context || window;
+  context.fn = this;
+  const args = [...arguments].slice(1);
+  const result = context.fn(...args);
   delete context.fn;
+  return result;
 };
 ```
 
@@ -199,16 +200,11 @@ Function.prototype.myCall = function (context) {
 ```js
 Function.prototype.myBind = function (context, ...args) {
   if (typeof this !== "function") {
-    throw TypeError("type Error");
+    throw new TypeError("type Error");
   }
 
-  var self = this;
-  return function () {
-    if (this instanceof F) {
-      return new self(...args, ...arguments);
-    }
-    return self.apply(context, [...args, ...arguments]);
-  };
+  const _this = this
+  const args = [...arguments].cl
 };
 ```
 
