--- a/各大厂面试题/好未来.md
+++ b/各大厂面试题/好未来.md
@@ -144,13 +144,27 @@ componentDidMount();
 render();
 componentWillUnMount();
 ```
+
 ![](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/a7109d1edb6d42a5b0eeba892e1e71ac~tplv-k3u1fbpfcp-watermark.image)
 
 ### 7. React16 生命周期有哪些变化
+
+https://s0.lgstatic.com/i/image/M00/5D/D9/CgqCHl-FVVeAaMJvAAKXOyLlUwM592.png
+https://s0.lgstatic.com/i/image/M00/5F/B0/Ciqc1F-Klv6AIeOPAADAZZgLu7U105.png
+
 ### 8. React16 的 hooks 有了解过吗
 
-9. useEffect 是用来做什么的
+可以让你在不编写 class 的情况下使用 state 以及其他的 React 特性。
 
+- useContext()，共享钩子。该钩子的作用是，在组件之间共享状态。 可以解决 react 逐层通过 Porps 传递数据，它接受 React.createContext()的返回结果作为参数，使用 useContext 将不再需要 Provider 和 Consumer。
+- useReducer()，Action 钩子。useReducer() 提供了状态管理，其基本原理是通过用户在页面中发起 action, 从而通过 reducer 方法来改变 state, 从而实现页面和状态的通信。使用很像 redux
+- useEffect()，副作用钩子。它接收两个参数， 第一个是进行的异步操作， 第二个是数组，用来给出 Effect 的依赖项
+- useRef()，获取组件的实例；渲染周期之间共享数据的存储(state 不能存储跨渲染周期的数据，因为 state 的保存会触发组件重渲染）
+- useRef 传入一个参数 initValue，并创建一个对象{ current: initValue }给函数组件使用，在整个生命周期中该对象保持不变。
+- useMemo 和 useCallback：可缓存函数的引用或值，useMemo 用在计算值的缓存，注意不用滥用。经常用在下面两种场景（要保持引用相等；对于组件内部用到的 object、array、函数等，如果用在了其他 Hook 的依赖数组中，或者作为 props 传递给了下游组件，应该使用 useMemo/useCallback）
+
+9. useEffect 是用来做什么的
+   副作用钩子。它接收两个参数， 第一个是进行的异步操作， 第二个是数组，用来给出 Effect 的依赖项
 10. React 的 diff 算法介绍一下
 
 11. React 的 Fiber 机制有了解过吗
